--- a/main.yml
+++ b/main.yml
@@ -8,8 +8,8 @@
     # one file per line. Each output can be customized with options as query string.
     #
     #  supported options:
-    #  - palette:     A preset of color, one of [github, github-dark, github-light]
-    #  - color_snake: Color of the snake
+     palette:     A preset of color, one of [github-dark]
+     color_snake: green
     #  - color_dots:  Coma separated list of dots color.
     #                 The first one is 0 contribution, then it goes from the low contribution to the highest.
     #                 Exactly 5 colors are expected.
@@ -17,3 +17,5 @@
       dist/github-snake.svg
       dist/github-snake-dark.svg?palette=github-dark
       dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+- name: generate-snake-game-from-github-contribution-grid
+  uses: Platane/snk@v2.2.1
