--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,4 +1,4 @@
-- uses: Platane/snk@v2
+ uses: Platane/snk@v2
   with:
     github_user_name: Kamasah-Dickson
     palette: github-dark
@@ -7,3 +7,4 @@
     dist/github-snake.svg
     dist/github-snake-dark.svg?palette=github-dark
     dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+
