--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,10 +1,26 @@
- uses: Platane/snk@v2
-  with:
-    github_user_name: Kamasah-Dickson
-    palette: github-dark
-    color_snake: green
-  outputs: |
-    dist/github-snake.svg
-    dist/github-snake-dark.svg?palette=github-dark
-    dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+name: My GitHub Actions Workflow
 
+on: [push]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Platane Snake
+      uses: Platane/snk@v2
+      with:
+        github_user_name: Kamasah-Dickson
+        palette: github-dark
+        color_snake: green
+
+    - name: Upload Artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: snake-artifacts
+        path: |
+          dist/github-snake.svg
+          dist/github-snake-dark.svg
+          dist/ocean.gif
